tests/error/i32_u64_body.vow
// TEST: stderr "function body type mismatch"
// TEST: error-code TypeMismatch
// A genuine i32 parameter as the implicit function-body return must not coerce
// to the declared u64 return type.
module I32U64Body

fn widen(x: i32) -> u64 {
  x
}

fn main() -> i32 {
  0
}
